create user information

--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -8,8 +8,10 @@
 				<center>
 					<div class="create-left-side">
 						<!-- Owner:<br/> -->
+						Database Username:<br/>
+						Username's Password:<br/>
 						Organization:<br/>
-						Name:<br/>
+						Database Name:<br/>
 						<div style="margin-bottom:25px;margin-top:25px;">Type:</div>
 						<div>Size:</div>
 						Description:<br/>
@@ -17,6 +19,10 @@
 					<div class="create-right-side">
 						<!-- <input class="create-input" placeholder="netId" value="{{inputOwner::input}}"> -->
 						<!-- </input><br/> -->
+						<input class="create-input" placeholder="Username" value="{{inputUsername::input}}">
+						</input><br/>
+						<input class="create-input" type="password" placeholder="Password" value="{{inputPassword::input}}">
+						</input><br/>
 						<input class="create-input" placeholder="My Database" value="{{inputOrg::input}}">
 						</input><br/>
 						<input class="create-input" placeholder="My Database" value="{{inputName::input}}">
