--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -23,7 +23,7 @@
 						</input><br/>
 						<input class="create-input" type="password" placeholder="Password" value="{{inputPassword::input}}">
 						</input><br/>
-						<input class="create-input" placeholder="My Database" value="{{inputOrg::input}}">
+						<input class="create-input" placeholder="My Organization" value="{{inputOrg::input}}">
 						</input><br/>
 						<input class="create-input" placeholder="My Database" value="{{inputName::input}}">
 						</input><br/>
