--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -41,6 +41,7 @@
 							<span>Last Updated: </span><br/>
 							<span>IP Address: </span><br/>
 							<span>Owner: </span><br/>
+							<span>Instance Port:</span>
 						</div>
 						<div class="card-right">
 							<span>[[database.SIZE]]</span><br/>
@@ -49,6 +50,8 @@
 							<span>[[database.UPDATED]]</span><br/>
 							<span>[[database.VMIP]]</span><br/>
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
+							<span>[[database.INSTANCEPORT]]</span><br/>
+							<span>[[database.INSTANCEIP]]</span><br/>
 						</div>
 					</div>
 				</paper-material>
