--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -42,6 +42,7 @@
 							<span>IP Address: </span><br/>
 							<span>Owner: </span><br/>
 							<span>Instance Port:</span>
+							<span>Instance IP:</span>
 						</div>
 						<div class="card-right">
 							<span>[[database.SIZE]]</span><br/>
