--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -41,8 +41,8 @@
 							<span>Last Updated: </span><br/>
 							<span>IP Address: </span><br/>
 							<span>Owner: </span><br/>
-							<span>Instance Port:</span>
-							<span>Instance IP:</span>
+							<span>Instance Port:</span><br/>
+							<span>Instance IP:</span><br/>
 						</div>
 						<div class="card-right">
 							<span>[[database.SIZE]]</span><br/>
