removing a few fields

--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -39,7 +39,7 @@
 							<span>Used: </span><br/>
 							<span>Status: </span><br/>
 							<span>Last Updated: </span><br/>
-							<span>IP Address: </span><br/>
+							<!-- <span>IP Address: </span><br/> -->
 							<span>Owner: </span><br/>
 							<span>Instance Port:</span><br/>
 							<span>Instance IP:</span><br/>
@@ -49,7 +49,7 @@
 							<paper-progress class="progress-bar" value="10"></paper-progress><br/>
 							<span>[[database.INUSE]]</span><br/>
 							<span>[[database.UPDATED]]</span><br/>
-							<span>[[database.VMIP]]</span><br/>
+							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
 							<span>[[database.INSTANCEPORT]]</span><br/>
 							<span>[[database.INSTANCEIP]]</span><br/>
