--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -51,7 +51,7 @@
 							<span>[[database.UPDATED]]</span><br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
-							<span>[[database.INSTANCEPORT]]</span><br/>
+							<span>{{database.INSTANCEPORT}}</span><br/>
 							<span>[[database.INSTANCEIP]]</span><br/>
 						</div>
 					</div>
