--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -51,8 +51,8 @@
 							<span>[[database.UPDATED]]</span><br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
-							<span>{{database.INSTANCEPORT}}</span><br/>
-							<span>[[database.INSTANCEIP]]</span><br/>
+							{{database.INSTANCEPORT}}<br/>
+							{{database.INSTANCEIP}}<br/>
 						</div>
 					</div>
 				</paper-material>
