--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -48,9 +48,9 @@
 							<span>[[database.SIZE]]</span><br/>
 							<paper-progress class="progress-bar" value="10"></paper-progress><br/>
 							<span>[[database.INUSE]]</span><br/>
-							<span>[[database.UPDATED]]</span><br/>
+							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
-							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
+							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
 							{{database.INSTANCEPORT}}<br/>
 							{{database.INSTANCEIP}}<br/>
 						</div>
