--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -45,9 +45,9 @@
 							<span>Instance IP:</span><br/>
 						</div>
 						<div class="card-right">
-							[[database.SIZE]]<br/>
+							{{database.SIZE}}<br/>
 							<paper-progress class="progress-bar" value="10"></paper-progress><br/>
-							[[database.STATUS]]<br/>
+							{{database.STATUS}}<br/>
 							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
@@ -60,12 +60,12 @@
 			</center>
 		</div>
 		<!-- RIGHT CLICK MENU -->
-		<div id="rightClickMenu" class="right-click-menu" hidden$="[[hideRightClickMenu]]">
+		<!-- <div id="rightClickMenu" class="right-click-menu" hidden$="[[hideRightClickMenu]]">
 			<center>
 				<div class="right-menu-title">Menu</div>
 				<div class="right-menu-item"on-click="goToEditDatabase">Edit</div>
 			</center>
-		</div>
+		</div> -->
 	</template>
 	<script src="dem-home.js"></script>
 </dom-module>
