--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -37,7 +37,7 @@
 						<div class="card-left">
 							<span>Maximum Size: <span><br/>
 							<span>Used: </span><br/>
-							<span>Status: </span><br/>
+							<!-- <span>Status: </span><br/> -->
 							<span>Last Updated: </span><br/>
 							<!-- <span>IP Address: </span><br/> -->
 							<span>Owner: </span><br/>
@@ -47,7 +47,7 @@
 						<div class="card-right">
 							{{database.SIZE}}<br/>
 							<paper-progress class="progress-bar" value="10"></paper-progress><br/>
-							{{database.STATUS}}<br/>
+							<!-- {{database.STATUS}}<br/> -->
 							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
