--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -14,7 +14,7 @@
 		<div class="home-page-container" on-click="closeRightClickMenu">
 		<h2 id="databasePageTitle">Database List:</h2>
 			<center id="databaseCard">
-			<template id="listDatabase" is="dom-repeat" items="{{databaseList}}" as="database">
+			<template id="listDatabase" is="dom-repeat" items="[[databaseList]]" as="database">
 				<paper-material id="{{database.ID}}" elevation="1" class="home-database-card" on-click="goToEditDatabase">
 					<h3 style="margin:5px;">[[database.NAME]]</h3>
 					<div>
