test force to page fix?

--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -51,8 +51,7 @@
 							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
-							{{database.INSTANCEPORT}}<br/>
-							{{database.INSTANCEIP}}<br/>
+							<div id="{{database.HTMLID}}"></div>
 						</div>
 					</div>
 				</paper-material>
