--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="card-right">
 							{{database.SIZE}}<br/>
-							<paper-progress class="progress-bar" value="10" max="{{database.CURRENTSIZE}}"></paper-progress><br/>
+							<paper-progress class="progress-bar" value="{{database.CURRENTSIZE}}" max="{{database.SIZE}}"></paper-progress><br/>
 							<!-- {{database.STATUS}}<br/> -->
 							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
