--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -18,6 +18,8 @@
 					<b>Database Type:</b> {{database.TYPE}}<br/>
 					<b>Database Name:</b> {{database.NAME}}<br/>
 					<b>Created At:</b> {{database.CREATED}}<br/>
+					<b>Created At:</b> {{database.INSTANCEIP}}<br/>
+					<b>Created At:</b> {{database.INSTANCEPORT}}<br/>
 				</div>
 				<div class="info-right-container">
 					<h3>VM Information:</h3>
