adding instance port and id to db-info page

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -18,8 +18,7 @@
 					<b>Database Type:</b> {{database.TYPE}}<br/>
 					<b>Database Name:</b> {{database.NAME}}<br/>
 					<b>Created At:</b> {{database.CREATED}}<br/>
-					<b>Created At:</b> {{database.INSTANCEIP}}<br/>
-					<b>Created At:</b> {{database.INSTANCEPORT}}<br/>
+					<div id="dataInstanceInfo"></div>
 				</div>
 				<div class="info-right-container">
 					<h3>VM Information:</h3>
