--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -43,6 +43,7 @@
 							<span>Owner: </span><br/>
 							<span>Instance Port:</span><br/>
 							<span>Instance IP:</span><br/>
+							Status:<br/>
 						</div>
 						<div class="card-right">
 							{{database.SIZE}}<br/>
