--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -41,9 +41,9 @@
 							<span>Last Updated: </span><br/>
 							<!-- <span>IP Address: </span><br/> -->
 							<span>Owner: </span><br/>
-							<span>Instance Port:</span><br/>
-							<span>Instance IP:</span><br/>
-							Status:<br/>
+							<!-- <span>Instance Port:</span><br/> -->
+							<!-- <span>Instance IP:</span><br/> -->
+							<!-- Status:<br/> -->
 						</div>
 						<div class="card-right">
 							{{database.SIZE}}<br/>
@@ -52,7 +52,7 @@
 							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
-							<div id="{{database.HTMLID}}"></div>
+							<!-- <div id="{{database.HTMLID}}"></div> -->
 						</div>
 					</div>
 				</paper-material>
