--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -41,9 +41,9 @@
 							<span>Last Updated: </span><br/>
 							<!-- <span>IP Address: </span><br/> -->
 							<span>Owner: </span><br/>
-							<!-- <span>Instance Port:</span><br/> -->
-							<!-- <span>Instance IP:</span><br/> -->
-							<!-- Status:<br/> -->
+							Status:<br/>
+							<span>Instance Port:</span><br/>
+							<span>Instance IP:</span><br/>
 						</div>
 						<div class="card-right">
 							{{database.SIZE}}<br/>
