--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -30,7 +30,7 @@
 					<h3>User Information:</h3>
 					<hr/>
 					<template is="dom-repeat" items="{{database.USERS}}" as="user">
-						{{user.name}}<br/>
+						{{user.name}}<paper-button raised on-click="changePasswordDialog"></paper-button><br/>
 					</template>
 				</div>
 				<div id="infoButtonContainer" class="info-button-container">
@@ -63,7 +63,7 @@
 			<paper-spinner active hidden="{{hideSpinner}}" style="width:50px;height:50px;"></paper-spinner>
 			<div class="scroll-box">
 				<template is="dom-repeat" items="{{database.USERS}}" as="user">
-					<paper-material elevation="1" class="info-delete-user-scroll-item" on-click="deleteUserAjax">{{user.name}}<paper-button raised on-click="changePasswordDialog"></paper-button>
+					<paper-material elevation="1" class="info-delete-user-scroll-item" on-click="deleteUserAjax">{{user.name}}
 					</paper-material>
 				</template>
 			</div>
