--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -56,6 +56,7 @@
 			modal>
 			<center>
 				<h2>Change User Password</h2>
+				<h3>Selected User: {{selectedUser.name}}</h3>
 				<br/><br/>
 				<input type="password" class="info-dialog-input" placeholder="New Password" value="{{password::input}}"></input><br/><br/>
 				<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
