--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -33,7 +33,7 @@
 						<div class="info-right-container">
 						{{user.name}}<br/>
 						</div>
-						<div class="info-right-container">
+						<div class="info-right-container-instance">
 							<paper-button class="changePassBtn" raised on-click="changePasswordDialog">Change Password</paper-button><br/>
 						</div>
 						<br/>
