--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -78,7 +78,7 @@
 				</template>
 			</div>
 			<br/><br/>
-			<paper-button class="info-dialog-input" raised dialog-confirm>Done</paper-button>
+			<paper-button class="info-button" raised dialog-confirm>Done</paper-button>
 			</paper-dialog>
 		</paper-dialog>
 		<paper-dialog
