still fixing that look

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -19,12 +19,17 @@
 					<b>Database Name:</b> {{database.NAME}}<br/>
 					<b>Created At:</b> {{database.CREATED}}<br/>
 					<div id="dataInstanceInfo"></div>
-				</div>
-				<!-- <div class="info-right-container"> -->
+					<br/>
 					<h3>VM Information:</h3>
 					<hr/>
 					<b>VMID:</b> {{database.VMID}}<br/>
 					<b>VMIP:</b> {{database.VMIP}}<br/>
+				</div>
+				<!-- <div class="info-right-container"> -->
+					<!-- <h3>VM Information:</h3>
+					<hr/>
+					<b>VMID:</b> {{database.VMID}}<br/>
+					<b>VMIP:</b> {{database.VMIP}}<br/> -->
 				<!-- </div> -->
 				<div class="info-right-container">
 					<h3>User Information:</h3>
