--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -31,7 +31,7 @@
 					<b>VMID:</b> {{database.VMID}}<br/>
 					<b>VMIP:</b> {{database.VMIP}}<br/> -->
 				<!-- </div> -->
-				<div class="info-right-container" style="position:relative;">
+				<div class="info-right-container" style="position:relative;width:300px">
 					<h3>User Information:</h3>
 					<hr/>
 					<template is="dom-repeat" items="{{database.USERS}}" as="user">
