--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -35,7 +35,7 @@
 					<h3>User Information:</h3>
 					<hr/>
 					<template is="dom-repeat" items="{{database.USERS}}" as="user">
-						<div style="border:1px solid black; margin-bottom:-5px;">
+						<div style="margin-bottom:-10px;">
 						<div class="info-right-container">
 						{{user.name}}<br/>
 						</div>
