--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -36,13 +36,12 @@
 					<hr/>
 					<template is="dom-repeat" items="{{database.USERS}}" as="user">
 						<div style="margin-bottom:-10px;">
-						<div class="info-right-container" style="">
-						{{user.name}}
-						<paper-button class="changePassBtn" style="float:right" raised on-click="changePasswordDialog">Change Password</paper-button><br/>
+						<div class="info-right-container" style="line-height:20px;">
+						{{user.name}}<br/>
 						</div>
-						<!-- <div class="info-right-container-instance">
+						<div class="info-right-container-instance">
 							<paper-button class="changePassBtn" style="float:right" raised on-click="changePasswordDialog">Change Password</paper-button><br/>
-						</div> -->
+						</div>
 						</div>
 						<br/>
 					</template>
