restore ip and port

--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -37,7 +37,6 @@
 						<div class="card-left">
 							<span>Maximum Size: <span><br/>
 							<span>Used: </span><br/>
-							<!-- <span>Status: </span><br/> -->
 							<span>Last Updated: </span><br/>
 							<!-- <span>IP Address: </span><br/> -->
 							<span>Owner: </span><br/>
@@ -52,7 +51,7 @@
 							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
-							<!-- <div id="{{database.HTMLID}}"></div> -->
+							<div id="{{database.HTMLID}}"></div>
 						</div>
 					</div>
 				</paper-material>
