--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -52,7 +52,7 @@
 							{{database.UPDATED}}<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
-							{{database.INSTANCEIP}}<br/>
+							<span>{{database.INSTANCEIP}}</span><br/>
 							{{database.INSTANCEPORT}}<br/>
 						</div>
 					</div>
