--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -7,7 +7,7 @@
 		<paper-toolbar id="titleToolbar" class="toolbar" hidden="{{hideToolbar}}">
 			<div class="toolbar-title-top" on-click="goToHome">Demeter</div>
 			<div class="toolbar-title-bottom" on-click="goToHome">Database Creation and Managment System</div>
-			<paper-item class="toolbar-button-4" raised>Administration</paper-item>
+			<paper-item class="toolbar-button-4">Administration</paper-item>
 			<paper-button class="toolbar-button-3" on-click="goToCreate" raised>Create</paper-button>
 			<paper-button class="toolbar-button-2" on-click="goToHelp" raised>Help</paper-button>
 			<paper-button class="toolbar-button" on-click="casLogout" raised>Logout</paper-button>
