--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -46,14 +46,14 @@
 							<span>Instance IP:</span><br/>
 						</div>
 						<div class="card-right">
-							{{database.SIZE}}<br/>
+							[[database.SIZE]]<br/>
 							<paper-progress class="progress-bar" value="{{database.CURRENTSIZE}}" max="{{database.SIZE}}"></paper-progress><br/>
 							<!-- {{database.STATUS}}<br/> -->
-							{{database.UPDATED}}<br/>
+							[[database.UPDATED]]<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
-							<span style="font-size:10pt;">{{database.OWNERID}}</span><br/>
-							<span>{{database.INSTANCEIP}}</span><br/>
-							{{database.INSTANCEPORT}}<br/>
+							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
+							<span>[[database.INSTANCEIP]]</span><br/>
+							<span>[[database.INSTANCEPORT]]</span><br/>
 						</div>
 					</div>
 				</paper-material>
