--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -52,6 +52,7 @@
 							[[database.UPDATED]]<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
+							{{database.index}}
 							<div id="{{database.HTMLID}}"></div>
 							<!-- <span>[[database.INSTANCEIP]]</span><br/>
 							<span>[[database.INSTANCEPORT]]</span><br/> -->
