--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -53,8 +53,8 @@
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
 							<div id="{{database.HTMLID}}"></div>
-							<span>[[database.INSTANCEIP]]</span><br/>
-							<span>[[database.INSTANCEPORT]]</span><br/>
+							<span>[[database.DBIP]]</span><br/>
+							<span>[[database.DBPORT]]</span><br/>
 						</div>
 					</div>
 				</paper-material>
