--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -30,6 +30,7 @@
 							<span>[[database.ORGANIZATION]]</span><br/>
 							<span style="font-size:10pt;">[[database.VMID]]</span><br/>
 							<span>[[database.DESCRIPTION]]</span><br/>
+							#{{index}}
 						</div>
 					</div>
 					<br/>
