--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -30,7 +30,6 @@
 							<span>[[database.ORGANIZATION]]</span><br/>
 							<span style="font-size:10pt;">[[database.VMID]]</span><br/>
 							<span>[[database.DESCRIPTION]]</span><br/>
-							#{{index}}
 						</div>
 					</div>
 					<br/>
@@ -53,7 +52,7 @@
 							[[database.UPDATED]]<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
-							<div id="{{database.HTMLID}}"></div>
+							<div id="databaseNumber-{{index}}"></div>
 							<span>[[database.DBIP]]</span><br/>
 							<span>[[database.DBPORT]]</span><br/>
 						</div>
