--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -41,14 +41,14 @@
 							<span>Last Updated: </span><br/>
 							<!-- <span>IP Address: </span><br/> -->
 							<span>Owner: </span><br/>
-							<!--Status:<br/>-->
+							Status:<br/>
 							<span>Instance Port:</span><br/>
 							<span>Instance IP:</span><br/>
 						</div>
 						<div class="card-right">
 							[[database.SIZE]]<br/>
 							<paper-progress class="progress-bar" value="{{database.CURRENTSIZE}}" max="{{database.SIZE}}"></paper-progress><br/>
-							<!-- {{database.STATUS}}<br/> -->
+							{{database.STATUS}}<br/>
 							[[database.UPDATED]]<br/>
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
