adding more information to be displayed.

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -18,6 +18,8 @@
 					<b>Database Type:</b> {{database.TYPE}}<br/>
 					<b>Database Name:</b> {{database.NAME}}<br/>
 					<b>Created At:</b> {{database.CREATED}}<br/>
+					<b>Instance IP:</b> {{database.DBIP}}<br/>
+					<b>Instance Port:</b> {{database.DBPORT}}<br/>
 					<div id="dataInstanceInfo"></div>
 					<br/>
 					<h3>VM Information:</h3>
