removed un-needed span tags

--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -20,30 +20,29 @@
 					<h3 style="margin:5px;">[[database.NAME]]</h3>
 					<div>
 						<div class="card-left" id="homeCardLeft">
-							<span>Type: </span><br/>
-							<span>Organization: </span><br/>
-							<span>VM ID: </span><br/>
-							<span>Description: </span><br/>
+							Type: <br/>
+							Organization: <br/>
+							VM ID: <br/>
+							Description: <br/>
 						</div>
 						<div class="card-right">
-							<span>[[database.TYPE]]</span><br/>
-							<span>[[database.ORGANIZATION]]</span><br/>
+							[[database.TYPE]]<br/>
+							[[database.ORGANIZATION]]<br/>
 							<span style="font-size:10pt;">[[database.VMID]]</span><br/>
-							<span>[[database.DESCRIPTION]]</span><br/>
+							[[database.DESCRIPTION]]<br/>
 						</div>
 					</div>
 					<br/>
 					<hr style="margin-left:5px; margin-right:5px;margin-top:0px;"/>
 					<div style="padding-bottom:5px;">
 						<div class="card-left">
-							<span>Maximum Size: <span><br/>
-							<span>Used: </span><br/>
-							<span>Last Updated: </span><br/>
-							<!-- <span>IP Address: </span><br/> -->
-							<span>Owner: </span><br/>
+							Maximum Size: <br/>
+							Used: <br/>
+							Last Updated: <br/>
+							Owner: <br/>
 							Status:<br/>
-							<span>Instance Port:</span><br/>
-							<span>Instance IP:</span><br/>
+							Instance Port:</span><br/>
+							Instance IP:<br/>
 						</div>
 						<div class="card-right">
 							[[database.SIZE]]<br/>
@@ -52,8 +51,8 @@
 							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
 							{{database.STATUS}}<br/>
-							<span>[[database.DBIP]]</span><br/>
-							<span>[[database.DBPORT]]</span><br/>
+							[[database.DBIP]]<br/>
+							[[database.DBPORT]]<br/>
 						</div>
 					</div>
 				</paper-material>
