removed old tags

--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -41,16 +41,15 @@
 							Last Updated: <br/>
 							Owner: <br/>
 							Status:<br/>
-							Instance Port:</span><br/>
+							Instance Port:<br/>
 							Instance IP:<br/>
 						</div>
 						<div class="card-right">
 							[[database.SIZE]]<br/>
 							<paper-progress class="progress-bar" value="{{database.CURRENTSIZE}}" max="{{database.SIZE}}"></paper-progress><br/>
 							[[database.UPDATED]]<br/>
-							<!-- <span>[[database.VMIP]]</span><br/> -->
 							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
-							{{database.STATUS}}<br/>
+							[[database.STATUS]]<br/>
 							[[database.DBIP]]<br/>
 							[[database.DBPORT]]<br/>
 						</div>
