--- a/laravel/public/demeter/include.html
+++ b/laravel/public/demeter/include.html
@@ -9,6 +9,7 @@
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
 <link rel="import" href="bower_components/iron-collapse/iron-collapse.html"/>
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html"/>
+<link rel="import" href="bower_components/paper-spinner/paper-spinner.html"/>
 
 <!-- Custome Elements -->
 <link rel="import" href="elements/dem-all-pages/dem-all-pages.html"/>
