adding owner name to everything

--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -49,7 +49,7 @@
 							[[database.SIZE]]<br/>
 							<paper-progress class="progress-bar" value="{{database.CURRENTSIZE}}" max="{{database.SIZE}}"></paper-progress><br/>
 							[[database.UPDATED]]<br/>
-							<span style="font-size:10pt;">[[database.OWNERID]]</span><br/>
+							<span style="font-size:10pt;">[[database.OWNERNAME]]</span><br/>
 							[[database.STATUS]]<br/>
 							[[database.DBIP]]<br/>
 							[[database.DBPORT]]<br/>
