adding owner netted

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -13,7 +13,7 @@
 					{{database.INUSE}}<br/>
 					<br/>
 					<b>Owner ID:</b> {{database.OWNERID}}<br/>
-					<b>Owner Name:</b> {{database.OWNERNAME}}<br/>
+					<b>Owner Name:</b> {{database.owner.netId}}<br/>
 					<b>Organization:</b> {{database.ORGANIZATION}}<br/>
 					<b>Database Type:</b> {{database.TYPE}}<br/>
 					<b>Database Name:</b> {{database.NAME}}<br/>
