--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -35,7 +35,7 @@
 						<input class="edit-input" placeholder="{{database.ORGANIZATION}}" value="{{inputOrg::input}}"></input>
 						<input class="edit-input" placeholder="{{database.DESCRIPTION}}" value="{{inputDesc::input}}"></input>
 						<input class="edit-input" placeholder="{{database.SIZE}}" value="{{inputSize::input}}"></input>
-						<input class="edit-input" placeholder="{{database.OWNERNAME}}" value="{{inputOwner::input}}"></input>
+						<input class="edit-input" placeholder="{{database.owner.netId}}" value="{{inputOwner::input}}"></input>
 					</div><br/>
 					<paper-button raised on-click="goBackToInfoPage" class="edit-button">Back</paper-button>
 					<paper-button raised on-click="requestChanges" class="edit-button">Confirm Changes</paper-button>
