--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -8,8 +8,8 @@
 				<center>
 					<div class="create-left-side">
 						<!-- Owner:<br/> -->
-						Database Username:<br/>
-						Username's Password:<br/>
+						Owner Username:<br/>
+						Owner's Password:<br/>
 						Organization:<br/>
 						Database Name:<br/>
 						<div style="margin-bottom:25px;margin-top:25px;">Type:</div>
