--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -35,7 +35,7 @@
 					<b>VMIP:</b> {{database.VMIP}}<br/> -->
 				<!-- </div> -->
 				<div class="info-right-container" style="position:relative;width:300px">
-					<h3>User Information:</h3>
+					<h3>Database Users:</h3>
 					<hr/>
 					<template is="dom-repeat" items="{{database.USERS}}" as="user">
 						<div style="margin-bottom:-20px;">
