error dialog fix

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -49,7 +49,8 @@
 		exit-animation="scale-down-animation"
 		modal>
 		<h3 style="color:red">Error: {{errorNumber}}</h3>
-		<h4>{{errorBody}}</h4>
+		<!-- <h4 id="editErrorBody">{{errorBody}}</h4> -->
+		<h4 id="editErrorBody">{{errorBody}}</h4>
 		<paper-button raised class="edit-button" dialog-dismiss>Okay</paper-button>
 	</paper-dialog>
 	</template>
