error dialog css fixing

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -54,7 +54,9 @@
 		</center>
 		<!-- <h4 id="editErrorBody">{{errorBody}}</h4> -->
 		<div id="editErrorBody">{{errorBody}}</div>
-		<paper-button raised class="edit-button" dialog-dismiss>Okay</paper-button>
+		<center>
+			<paper-button raised class="edit-button" style="font-size:12pt" dialog-dismiss>Okay</paper-button>
+		</center>
 	</paper-dialog>
 	</template>
 	<script src="dem-edit.js"></script>
