added an error dialog to the create page as well.

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -53,8 +53,7 @@
 			<h2 style="color:red">Error: {{errorNumber}}</h2>
 		</center>
 		<br/>
-		<!-- <h4 id="editErrorBody">{{errorBody}}</h4> -->
-		<div id="editErrorBody">{{errorBody}}</div>
+		<div id="editErrorBody"></div>
 		<center>
 			<paper-button raised class="edit-button" style="font-size:12pt" dialog-dismiss>Okay</paper-button>
 		</center>
