--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -51,7 +51,21 @@
 			</paper-material>
 		</center>
 	</div>
-	
+	<paper-dialog
+		id="homeErrorDialog"
+		entry-animation="scale-up-animation"
+		exit-animation="scale-down-animation"
+		modal
+		style="max-height:600px;overflow:scroll;">
+		<center>
+			<h2 style="color:red">Error: {{errorNumber}}</h2>
+		</center>
+		<div id="homeErrorBody"></div>
+		<center>
+			<paper-button raised class="create-button">Okay</paper-button>
+		</center>
+	</paper-dialog>
+	</paper-dialog>
 	</template>
 	<script src="dem-create.js"></script>
 </dom-module>
