--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -59,9 +59,8 @@
 		style="max-height:600px;overflow:scroll;">
 		<center>
 			<h2 style="color:red">Error: {{errorNumber}}</h2>
-		</center>
-		<div id="homeErrorBody"></div>
-		<center>
+			<br/>
+			<div>{{errorBody}}</div>
 			<paper-button raised class="create-button">Okay</paper-button>
 		</center>
 	</paper-dialog>
