--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -52,7 +52,7 @@
 		<center>
 			<h2 style="color:red">Error: {{errorNumber}}</h2>
 			<br/>
-			<div>{{errorBody}}</div>
+			<h3>{{errorBody}}</h3>
 			<paper-button raised class="edit-button" style="font-size:12pt" dialog-dismiss>Okay</paper-button>
 		</center>
 	</paper-dialog>
